--- a/app/design/adminhtml/default/default/template/eav/attribute/set/main.phtml
+++ b/app/design/adminhtml/default/default/template/eav/attribute/set/main.phtml
@@ -12,12 +12,12 @@
 <div class="content-header">
     <table cellspacing="0">
         <tr>
-            <td style="width:50%;"><h3 class="icon-head head-eav-attribute-sets"><?php echo $this->escapeHtml($this->_getHeader()) ?></h3></td>
+            <td style="width:50%;"><h3 class="icon-head head-eav-attribute-sets"><?= $this->escapeHtml($this->_getHeader()) ?></h3></td>
             <td class="form-buttons">
-                <?php echo $this->getBackButtonHtml() ?>
-                <?php echo $this->getResetButtonHtml() ?>
-                <?php echo $this->getDeleteButtonHtml() ?>
-                <?php echo $this->getSaveButtonHtml() ?>
+                <?= $this->getBackButtonHtml() ?>
+                <?= $this->getResetButtonHtml() ?>
+                <?= $this->getDeleteButtonHtml() ?>
+                <?= $this->getSaveButtonHtml() ?>
             </td>
         </tr>
     </table>
@@ -25,33 +25,33 @@
 <table cellspacing="0" width="100%">
     <tr>
         <td width="360" style="border-right:1px solid #ddd; padding:0 23px 23px 0;" class="edit-attribute-set">
-            <?php echo $this->getSetFormHtml() ?>
+            <?= $this->getSetFormHtml() ?>
         </td>
         <td width="320" style="border-right:1px solid #ddd; padding:0 23px 23px 23px;">
             <div class="content-header skip-header">
             <table cellspacing="0">
                     <tbody>
                         <tr>
-                            <td><h3><?php echo Mage::helper('eav')->__('Groups') ?></h3></td>
+                            <td><h3><?= Mage::helper('eav')->__('Groups') ?></h3></td>
                         </tr>
                     </tbody>
                 </table>
             </div>
 
             <?php if (!$this->getIsReadOnly()): ?>
-                <p><?php echo $this->getAddGroupButton() ?>&nbsp;<?php echo $this->getDeleteGroupButton() ?></p>
-                <p class="note-block"><?php echo Mage::helper('eav')->__('Double click on a group to rename it') ?></p>
+                <p><?= $this->getAddGroupButton() ?>&nbsp;<?= $this->getDeleteGroupButton() ?></p>
+                <p class="note-block"><?= Mage::helper('eav')->__('Double click on a group to rename it') ?></p>
             <?php endif ?>
 
-            <?php echo $this->getSetsFilterHtml() ?>
-            <?php echo $this->getGroupTreeHtml() ?>
+            <?= $this->getSetsFilterHtml() ?>
+            <?= $this->getGroupTreeHtml() ?>
         </td>
         <td style="padding:0 0 23px 23px;">
             <div class="content-header skip-header">
                 <table cellspacing="0">
                     <tbody>
                         <tr>
-                            <td><h3><?php echo Mage::helper('eav')->__('Unassigned Attributes') ?></h3></td>
+                            <td><h3><?= Mage::helper('eav')->__('Unassigned Attributes') ?></h3></td>
                         </tr>
                     </tbody>
                 </table>
@@ -59,8 +59,8 @@
             <div id="tree-div2" style="height:400px; margin-top:5px;overflow:auto"></div>
             <script type="text/javascript">
             //<![CDATA[
-            var allowDragAndDrop = <?php echo ($this->getIsReadOnly() ? 'false' : 'true'); ?>;
-            var canEditGroups = <?php echo ($this->getIsReadOnly() ? 'false' : 'true'); ?>;
+            var allowDragAndDrop = <?= ($this->getIsReadOnly() ? 'false' : 'true'); ?>;
+            var canEditGroups = <?= ($this->getIsReadOnly() ? 'false' : 'true'); ?>;
 
             var TreePanels = function() {
                 // shorthand
@@ -87,7 +87,7 @@
                         });
 
                         tree.setRootNode(this.root);
-                        buildCategoryTree(this.root, <?php echo $this->getGroupTreeJson() ?>);
+                        buildCategoryTree(this.root, <?= $this->getGroupTreeJson() ?>);
                         // render the tree
                         tree.render();
                         this.root.expand(false, false);
@@ -95,7 +95,7 @@
 
                         this.ge = new Ext.tree.TreeEditor(tree, {
                             allowBlank:false,
-                            blankText:'<?php echo Mage::helper('core')->jsQuoteEscape(Mage::helper('eav')->__('A name is required')) ?>',
+                            blankText:'<?= Mage::helper('core')->jsQuoteEscape(Mage::helper('eav')->__('A name is required')) ?>',
                             selectOnFocus:true,
                             cls:'folder'
                         });
@@ -143,7 +143,7 @@
                             id:'free'
                         });
                         tree2.setRootNode(this.root2);
-                        buildCategoryTree(this.root2, <?php echo $this->getAttributeTreeJson() ?>);
+                        buildCategoryTree(this.root2, <?= $this->getAttributeTreeJson() ?>);
 
                         this.root2.addListener('beforeinsert', editSet.rightBeforeInsert);
                         this.root2.addListener('beforeappend', editSet.rightBeforeAppend);
@@ -233,7 +233,7 @@
                         }
 
                         if( editSet.SystemNodesExists(editSet.currentNode) ) {
-                            alert('<?php echo Mage::helper('core')->jsQuoteEscape(Mage::helper('eav')->__('This group contains system attributes. Please move system attributes to another group and try again.')) ?>');
+                            alert('<?= Mage::helper('core')->jsQuoteEscape(Mage::helper('eav')->__('This group contains system attributes. Please move system attributes to another group and try again.')) ?>');
                             return;
                         }
 
@@ -270,7 +270,7 @@
                     },
 
                     addGroup : function() {
-                        var group_name = prompt("<?php echo Mage::helper('core')->jsQuoteEscape(Mage::helper('eav')->__('Please enter a new group name')) ?>","");
+                        var group_name = prompt("<?= Mage::helper('core')->jsQuoteEscape(Mage::helper('eav')->__('Please enter a new group name')) ?>","");
                         group_name = group_name.strip();
                         if( group_name == '' ) {
                             this.addGroup();
@@ -313,7 +313,7 @@
                         }
                         for (var i=0; i < TreePanels.root.childNodes.length; i++) {
                             if (TreePanels.root.childNodes[i].text.toLowerCase() == name.toLowerCase() && TreePanels.root.childNodes[i].id != exceptNodeId) {
-                                errorText = "<?php echo Mage::helper('core')->jsQuoteEscape(Mage::helper('eav')->__('Attribute group with the \"/name/\" name already exists')) ?>";
+                                errorText = "<?= Mage::helper('core')->jsQuoteEscape(Mage::helper('eav')->__('Attribute group with the \"/name/\" name already exists')) ?>";
                                 alert(errorText.replace("/name/",name));
                                 return false;
                             }
@@ -333,7 +333,7 @@
                             editSet.req.form_key = FORM_KEY;
                         }
                         var req = {data : Ext.util.JSON.encode(editSet.req)};
-                        var con = new Ext.lib.Ajax.request('POST', '<?php echo $this->getMoveUrl() ?>', {success:editSet.success,failure:editSet.failure}, req);
+                        var con = new Ext.lib.Ajax.request('POST', '<?= $this->getMoveUrl() ?>', {success:editSet.success,failure:editSet.failure}, req);
                     },
 
                     success : function(o) {
@@ -350,7 +350,7 @@
                     },
 
                     failure : function(o) {
-                        alert('<?php echo Mage::helper('core')->jsQuoteEscape(Mage::helper('eav')->__('Unable to complete this request.')) ?>');
+                        alert('<?= Mage::helper('core')->jsQuoteEscape(Mage::helper('eav')->__('Unable to complete this request.')) ?>');
                     },
 
                     groupBeforeMove : function(tree, nodeThis, oldParent, newParent) {
@@ -365,7 +365,7 @@
 
                     rightBeforeAppend : function(tree, nodeThis, node, newParent) {
                         if (node.attributes.is_user_defined == 0) {
-                            alert('<?php echo Mage::helper('core')->jsQuoteEscape(Mage::helper('eav')->__('You cannot remove system attribute from this set.')) ?>');
+                            alert('<?= Mage::helper('core')->jsQuoteEscape(Mage::helper('eav')->__('You cannot remove system attribute from this set.')) ?>');
                             return false;
                         }
                         else {
@@ -380,7 +380,7 @@
                         }
 
                         if (node.attributes.is_user_defined == 0) {
-                            alert('<?php echo Mage::helper('core')->jsQuoteEscape(Mage::helper('eav')->__('You cannot remove system attribute from this set.')) ?>');
+                            alert('<?= Mage::helper('core')->jsQuoteEscape(Mage::helper('eav')->__('You cannot remove system attribute from this set.')) ?>');
                             return false;
                         }
                         else {
@@ -404,7 +404,7 @@
                     rightRemove : function(tree, nodeThis, node) {
                         if( nodeThis.firstChild == null && node.id != 'empty' ) {
                             var newNode = new Ext.tree.TreeNode({
-                                    text : '<?php echo Mage::helper('core')->jsQuoteEscape(Mage::helper('eav')->__('Empty')) ?>',
+                                    text : '<?= Mage::helper('core')->jsQuoteEscape(Mage::helper('eav')->__('Empty')) ?>',
                                     id : 'empty',
                                     cls : 'folder',
                                     is_user_defined : 1,
