--- a/app/design/frontend/base/default/template/customer/form/register.phtml
+++ b/app/design/frontend/base/default/template/customer/form/register.phtml
@@ -69,7 +69,7 @@
                 <?php $_block = 'eav/widget_'.$_attribute->getFrontendInput() ?>
                 <?php $_element = $this->getLayout()->createBlock($_block)->setData('attribute', $_attribute) ?>
                 <?php if ($_element->isEnabled()): ?>
-                    <li><?php echo $_element->setObject($this->getFormData())->toHtml() ?></li>
+                    <li><?= $_element->setObject($this->getFormData())->toHtml() ?></li>
                 <?php endif ?>
             <?php endforeach ?>
 
