--- a/app/design/frontend/base/default/template/eav/widget/textarea.phtml
+++ b/app/design/frontend/base/default/template/eav/widget/textarea.phtml
@@ -13,5 +13,5 @@
 <?php $_code = $_attribute->getAttributeCode() ?>
 <label for="<?= $this->getFieldId($_code)?>"<?php if ($this->isRequired()) echo ' class="required"' ?>><?php if ($this->isRequired()) echo '<em>*</em>' ?><?= $this->__($_attribute->getStoreLabel()) ?></label>
 <div class="input-box">
-    <textarea id="<?= $this->getFieldId($_code)?>" name="<?= $this->getFieldName($_code)?>" title="<?= Mage::helper('core')->quoteEscape($this->__($_attribute->getStoreLabel())) ?>" class="input-text" <?= $this->getFieldParams() ?>><?= $this->escapeHtml($this->getObject()->getData($_code)) ?></textarea>
+    <textarea id="<?= $this->getFieldId($_code)?>" name="<?= $this->getFieldName($_code)?>" title="<?= Mage::helper('core')->quoteEscape($this->__($_attribute->getStoreLabel())) ?>" class="input-text <?= $_attribute->getFrontendClass() ?>" <?= $this->getFieldParams() ?>><?= $this->escapeHtml($this->getObject()->getData($_code)) ?></textarea>
 </div>
