--- a/app/design/frontend/base/default/template/eav/widget/text.phtml
+++ b/app/design/frontend/base/default/template/eav/widget/text.phtml
@@ -13,5 +13,5 @@
 <?php $_code = $_attribute->getAttributeCode() ?>
 <label for="<?= $this->getFieldId($_code)?>"<?php if ($this->isRequired()) echo ' class="required"' ?>><?php if ($this->isRequired()) echo '<em>*</em>' ?><?= $this->__($_attribute->getStoreLabel()) ?></label>
 <div class="input-box">
-    <input type="text" id="<?= $this->getFieldId($_code)?>" name="<?= $this->getFieldName($_code)?>" value="<?= $this->escapeHtml($this->getObject()->getData($_code)) ?>" title="<?= Mage::helper('core')->quoteEscape($this->__($_attribute->getStoreLabel())) ?>" class="input-text <?= $_attribute->getFrontendClass() ?>" <?= $this->getFieldParams() ?> />
+    <input type="text" id="<?= $this->getFieldId($_code)?>" name="<?= $this->getFieldName($_code)?>" value="<?= $this->escapeHtml($this->getObject()->getData($_code)) ?>" title="<?= Mage::helper('core')->quoteEscape($this->__($_attribute->getStoreLabel())) ?>" class="input-text<?= $_attribute->getFrontend()->getClass() ?>" <?= $this->getFieldParams() ?> />
 </div>
