--- a/app/design/adminhtml/default/default/template/catalog/product/attribute/js.phtml
+++ b/app/design/adminhtml/default/default/template/catalog/product/attribute/js.phtml
@@ -51,7 +51,7 @@ function toggleApplyVisibility(select) {
 function checkOptionsPanelVisibility(){
     if($('matage-options-panel')){
         var panel = $('matage-options-panel');
-        if($('frontend_input') && ($('frontend_input').value=='select' || $('frontend_input').value=='multiselect')){
+        if ($('frontend_input') && ['select', 'multiselect', 'customselect'].includes($('frontend_input').value)) {
             panel.show();
         }
         else {
@@ -65,7 +65,7 @@ function bindAttributeInputType()
     checkOptionsPanelVisibility();
     switchDefaultValueField();
     checkIsConfigurableVisibility();
-    if($('frontend_input') && ($('frontend_input').value=='select' || $('frontend_input').value=='multiselect' || $('frontend_input').value=='price')){
+    if ($('frontend_input') && ['select', 'multiselect', 'price'].includes($('frontend_input').value)) {
         if($('is_filterable') && !$('is_filterable').getAttribute('readonly')){
             $('is_filterable').disabled = false;
         }
@@ -117,7 +117,11 @@ function bindAttributeInputType()
         case 'text':
             setRowVisibility('is_html_allowed_on_front', true);
             $('is_html_allowed_on_front').disabled = false;
-
+            if (!$('frontend_class').getAttribute('readonly')) {
+                $('frontend_class').disabled = false;
+            }
+            break;
+        case 'customselect':
             if (!$('frontend_class').getAttribute('readonly')) {
                 $('frontend_class').disabled = false;
             }
@@ -175,6 +179,7 @@ function switchDefaultValueField()
 
     switch (currentValue) {
         case 'select':
+        case 'customselect':
             optionDefaultInputType = 'radio';
             break;
 
