--- a/public/skin/frontend/rwd/default/css/styles.css
+++ b/public/skin/frontend/rwd/default/css/styles.css
@@ -8521,7 +8521,7 @@ div.paypal-logo span > img {
 /* ============================================ *
  * Checkout - Mini cart
  * ============================================ */
-.header-minicart {
+.header-minicart, #cart-sidebar.mini-products-list .product-details .truncated {
   display: inline-block;
 }
 @media only screen and (max-width: 770px) {
