RWD: removed elevateZoom and rewrote basic zoom functionality in vanilla js

--- a/public/skin/frontend/rwd/default/css/styles.css
+++ b/public/skin/frontend/rwd/default/css/styles.css
@@ -4576,6 +4576,7 @@ p.product-name a:hover {
 }
 .product-image-gallery {
   position: relative;
+  overflow: hidden;
 }
 .product-image-gallery .gallery-image {
   display: none;
