--- a/app/design/frontend/base/default/template/customer/address/edit.phtml
+++ b/app/design/frontend/base/default/template/customer/address/edit.phtml
@@ -23,71 +23,23 @@
 </div>
 <?php endif ?>
 <?= $this->getMessagesBlock()->toHtml() ?>
-<form action="<?= $this->getSaveUrl() ?>" method="post" id="form-validate">
-    <div class="fieldset">
+<form action="<?= $this->getSaveUrl() ?>" method="post" id="form-validate" enctype="multipart/form-data">
     <?= $this->getBlockHtml('formkey') ?>
     <input type="hidden" name="success_url" value="<?= $this->getSuccessUrl() ?>" />
     <input type="hidden" name="error_url" value="<?= $this->getErrorUrl() ?>" />
-        <h2 class="legend"><?= $this->__('Contact Information') ?></h2>
-        <ul class="form-list">
-            <li class="fields">
-                <?= $this->getNameBlockHtml() ?>
-            </li>
-            <li class="wide">
-                <label for="company"><?= $this->__('Company') ?></label>
-                <div class="input-box">
-                    <input type="text" name="company" id="company" title="<?= Mage::helper('core')->quoteEscape($this->__('Company')) ?>" value="<?= $this->escapeHtml($this->getAddress()->getCompany()) ?>" class="input-text <?= $this->helper('customer/address')->getAttributeValidationClass('company') ?>" />
-                </div>
-            </li>
-            <li class="fields">
-                <div class="field">
-                    <label for="telephone" class="required"><em>*</em><?= $this->__('Telephone') ?></label>
-                    <div class="input-box">
-                        <input type="text" name="telephone" value="<?= $this->escapeHtml($this->getAddress()->getTelephone()) ?>" title="<?= Mage::helper('core')->quoteEscape($this->__('Telephone')) ?>" class="input-text  <?= $this->helper('customer/address')->getAttributeValidationClass('telephone') ?>" id="telephone" />
-                    </div>
-                </div>
-                <div class="field">
-                    <label for="fax"><?= $this->__('Fax') ?></label>
-                    <div class="input-box">
-                        <input type="text" name="fax" id="fax" title="<?= Mage::helper('core')->quoteEscape($this->__('Fax')) ?>" value="<?= $this->escapeHtml($this->getAddress()->getFax()) ?>" class="input-text <?= $this->helper('customer/address')->getAttributeValidationClass('fax') ?>" />
-                    </div>
-                </div>
-            </li>
-        </ul>
-    </div>
+
+<?php $_groups = $this->getGroupedFields() ?>
+<?php foreach (array_keys($_groups) as $_i => $_group): ?>
     <div class="fieldset">
-        <h2 class="legend"><?= $this->__('Address') ?></h2>
+        <h2 class="legend"><?= $this->__($_group) ?></h2>
+    <?php if ($_i === 0): ?>
+        <p class="required"><?= $this->__('* Required Fields') ?></p>
+    <?php endif ?>
         <ul class="form-list">
-        <?php $_streetValidationClass = $this->helper('customer/address')->getAttributeValidationClass('street'); ?>
+    <?php foreach ($_groups[$_group] as $_code => $_attribute): ?>
+        <?php if ($_code === 'region'): continue ?>
+        <?php elseif ($_code === 'region_id'): ?>
             <li class="wide">
-                <label for="street_1" class="required"><em>*</em><?= $this->__('Street Address') ?></label>
-                <div class="input-box">
-                    <input type="text" name="street[]" value="<?= $this->escapeHtml($this->getAddress()->getStreet(1)) ?>" title="<?= Mage::helper('core')->quoteEscape($this->__('Street Address')) ?>" id="street_1" class="input-text <?= $_streetValidationClass ?>" />
-                </div>
-            </li>
-        <?php $_streetValidationClass = trim(str_replace('required-entry', '', $_streetValidationClass)); ?>
-        <?php for ($_i = 2, $_n = $this->helper('customer/address')->getStreetLines(); $_i <= $_n; $_i++): ?>
-            <li class="wide">
-                <div class="input-box">
-                    <input type="text" name="street[]" value="<?= $this->escapeHtml($this->getAddress()->getStreet($_i)) ?>" title="<?= Mage::helper('core')->quoteEscape($this->__('Street Address %s', $_i)) ?>" id="street_<?= $_i ?>" class="input-text <?= $_streetValidationClass ?>" />
-                </div>
-            </li>
-        <?php endfor ?>
-            <?php if ($this->helper('customer/address')->isVatAttributeVisible()) : ?>
-            <li class="wide">
-                <label for="vat_id"><?= $this->__('VAT Number') ?></label>
-                <div class="input-box">
-                    <input type="text" name="vat_id" value="<?= $this->escapeHtml($this->getAddress()->getVatId()) ?>" title="<?= Mage::helper('core')->quoteEscape($this->__('VAT Number')) ?>" id="vat_id" class="input-text <?= $this->helper('customer/address')->getAttributeValidationClass('vat_id') ?>" />
-                </div>
-            </li>
-            <?php endif ?>
-            <li class="fields">
-                <div class="field">
-                    <label for="city" class="required"><em>*</em><?= $this->__('City') ?></label>
-                    <div class="input-box">
-                        <input type="text" name="city" value="<?= $this->escapeHtml($this->getAddress()->getCity()) ?>"  title="<?= Mage::helper('core')->quoteEscape($this->__('City')) ?>" class="input-text <?= $this->helper('customer/address')->getAttributeValidationClass('city') ?>" id="city" />
-                    </div>
-                </div>
                 <div class="field">
                     <label for="region_id" class="required"><em>*</em><?= $this->__('State/Province') ?></label>
                     <div class="input-box">
@@ -95,28 +47,26 @@
                            <option value=""><?= $this->__('Please select region, state or province') ?></option>
                         </select>
                         <script type="text/javascript">
-                        //<![CDATA[
                             $('region_id').setAttribute('defaultValue',  "<?= $this->getAddress()->getRegionId() ?>");
-                        //]]>
                         </script>
                         <input type="text" id="region" name="region" value="<?= $this->escapeHtml($this->getAddress()->getRegion()) ?>"  title="<?= Mage::helper('core')->quoteEscape($this->__('State/Province')) ?>" class="input-text <?= $this->helper('customer/address')->getAttributeValidationClass('region') ?>" />
                     </div>
                 </div>
             </li>
-            <li class="fields">
-                <div class="field">
-                    <label for="zip" class="required"><em>*</em><?= $this->__('Zip/Postal Code') ?></label>
-                    <div class="input-box">
-                        <input type="text" name="postcode" value="<?= $this->escapeHtml($this->getAddress()->getPostcode()) ?>" title="<?= Mage::helper('core')->quoteEscape($this->__('Zip/Postal Code')) ?>" id="zip" class="input-text validate-zip-international <?= $this->helper('customer/address')->getAttributeValidationClass('postcode') ?>" />
-                    </div>
-                </div>
-                <div class="field">
-                    <label for="country" class="required"><em>*</em><?= $this->__('Country') ?></label>
-                    <div class="input-box">
-                        <?= $this->getCountryHtmlSelect() ?>
-                    </div>
-                </div>
-            </li>
+        <?php else: ?>
+            <?php $_block = 'eav/widget_'.$_attribute->getFrontendInput() ?>
+            <?php $_element = $this->getLayout()->createBlock($_block)->setData('attribute', $_attribute) ?>
+            <?php if ($_element->isEnabled()): ?>
+                <li class="wide"><?= $_element->setObject($this->getAddress())->toHtml() ?></li>
+            <?php endif ?>
+        <?php endif ?>
+    <?php endforeach ?>
+        </ul>
+    </div>
+<?php endforeach ?>
+
+    <div class="fieldset">
+        <ul class="form-list">
             <li<?php if($this->canSetAsDefaultBilling()) echo ' class="control"' ?>>
                 <?php if($this->isDefaultBilling()): ?>
                     <strong><?= $this->__('Default Billing Address') ?></strong>
@@ -137,27 +87,12 @@
             </li>
         </ul>
     </div>
-    <div class="fieldset">
-        <h2 class="legend"><?= $this->__('Other') ?></h2>
-        <ul class="form-list">
-            <?php foreach ($this->getExtraFields() as $_code => $_attribute): ?>
-                <?php $_block = 'eav/widget_'.$_attribute->getFrontendInput() ?>
-                <?php $_element = $this->getLayout()->createBlock($_block)->setData('attribute', $_attribute) ?>
-                <?php if ($_element->isEnabled()): ?>
-                    <li><?= $_element->setObject($this->getAddress())->toHtml() ?></li>
-                <?php endif ?>
-            <?php endforeach ?>
-        </ul>
-    </div>
     <div class="buttons-set">
-        <p class="required"><?= $this->__('* Required Fields') ?></p>
         <p class="back-link"><a href="<?= $this->escapeUrl($this->getBackUrl()) ?>"><small>&laquo; </small><?= $this->__('Back') ?></a></p>
-        <button data-action="save-customer-address" type="submit" title="<?= Mage::helper('core')->quoteEscape($this->__('Save Address')) ?>" class="button"><?= $this->__('Save Address') ?></button>
+        <button type="submit" title="<?= Mage::helper('core')->quoteEscape($this->__('Save Address')) ?>" class="button"><span><span><?= $this->__('Save Address') ?></span></span></button>
     </div>
 </form>
 <script type="text/javascript">
-//<![CDATA[
     var dataForm = new VarienForm('form-validate', true);
-    new RegionUpdater('country', 'region', 'region_id', <?= Mage::helper('directory')->getRegionJsonByStore() ?>, undefined, 'zip');
-//]]>
+    new RegionUpdater('country_id', 'region', 'region_id', <?= Mage::helper('directory')->getRegionJsonByStore() ?>, undefined, 'postcode');
 </script>
