--- a/app/design/install/default/default/template/page.phtml
+++ b/app/design/install/default/default/template/page.phtml
@@ -21,7 +21,7 @@
     <meta charset="utf-8">
     <title><?= Mage::helper('install')->__('Maho Installation Wizard') ?></title>
     <script type="text/javascript" src="<?= $this->getJsUrl() ?>prototype/prototype.js"></script>
-    <script type="text/javascript" src="<?= $this->getJsUrl() ?>prototype/validation.js"></script>
+    <script type="text/javascript" src="<?= $this->getJsUrl() ?>validation.js"></script>
     <script type="text/javascript" src="<?= $this->getJsUrl() ?>varien/js.js"></script>
     <script type="text/javascript" src="<?= $this->getJsUrl() ?>varien/form.js"></script>
     <link rel="icon" type="image/svg+xml" href="<?= $this->getSkinUrl('images/favicon.svg') ?>" sizes="any">
