--- a/app/design/adminhtml/default/default/layout/dataflow.xml
+++ b/app/design/adminhtml/default/default/layout/dataflow.xml
@@ -18,7 +18,7 @@
         <block type="adminhtml/page" name="convert_root" output="toHtml" template="page.phtml">
             <block type="adminhtml/page_head" name="convert_root_head" as="head" template="page/head.phtml">
                 <action method="addJs"><script>prototype/prototype.js</script></action>
-                <action method="addJs"><script>prototype/validation.js</script></action>
+                <action method="addJs"><script>validation.js</script></action>
                 <action method="addJs"><script>varien/js.js</script></action>
                 <action method="addJs"><script>mage/translate.js</script></action>
                 <action method="addJs"><script>mage/adminhtml/tools.js</script></action>
@@ -32,7 +32,7 @@
         <block type="adminhtml/page" name="convert_root" output="toHtml" template="page.phtml">
             <block type="adminhtml/page_head" name="convert_root_head" as="head" template="page/head.phtml">
                 <action method="addJs"><script>prototype/prototype.js</script></action>
-                <action method="addJs"><script>prototype/validation.js</script></action>
+                <action method="addJs"><script>validation.js</script></action>
                 <action method="addJs"><script>varien/js.js</script></action>
                 <action method="addJs"><script>mage/translate.js</script></action>
                 <action method="addJs"><script>mage/adminhtml/tools.js</script></action>
