--- a/app/design/adminhtml/default/default/layout/main.xml
+++ b/app/design/adminhtml/default/default/layout/main.xml
@@ -43,7 +43,7 @@ Default layout, loads most of the pages
                 <action method="setTitle" translate="title"><title>Maho Admin</title></action>
                 <action method="addJs"><script>prototype/prototype.js</script></action>
                 <action method="addJs"><script>maho-dialog.js</script></action>
-                <action method="addJs"><script>prototype/validation.js</script></action>
+                <action method="addJs"><script>validation.js</script></action>
                 <action method="addJs"><script>varien/js.js</script></action>
                 <action method="addJs"><script>mage/translate.js</script></action>
 
