--- a/app/design/adminhtml/default/default/template/resetforgottenpassword.phtml
+++ b/app/design/adminhtml/default/default/template/resetforgottenpassword.phtml
@@ -20,7 +20,7 @@
     <link rel="icon" type="image/svg+xml" href="<?= $this->getSkinUrl('images/favicon.svg') ?>" sizes="any">
     <link rel="icon" type="image/png" href="<?= $this->getSkinUrl('images/favicon.png') ?>">
     <script type="text/javascript" src="<?= $this->getJsUrl('prototype/prototype.js') ?>"></script>
-    <script type="text/javascript" src="<?= $this->getJsUrl('prototype/validation.js') ?>"></script>
+    <script type="text/javascript" src="<?= $this->getJsUrl('validation.js') ?>"></script>
     <script type="text/javascript" src="<?= $this->getJsUrl('mage/adminhtml/form.js') ?>"></script>
 </head>
 <body id="page-login">
