--- a/app/design/frontend/rwd/default/template/reports/widget/compared/content/compared_grid.phtml
+++ b/app/design/frontend/rwd/default/template/reports/widget/compared/content/compared_grid.phtml
@@ -21,7 +21,7 @@
         <?php $i=0; ?>
         <ul class="products-grid products-grid--max-<?= $_columnCount ?>-col-widget">
             <?php foreach ($_products as $_product): ?>
-                <li class="item<?php if(($i-1)%$_columnCount==0): ?>>
+                <li class="item">
                     <?php $_imgSize = 210; ?>
                     <a href="<?= $_product->getProductUrl() ?>" title="<?= $this->stripTags($_product->getName(), null, true) ?>" class="product-image">
                         <img src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize($_imgSize) ?>" alt="<?= $this->stripTags($_product->getName(), null, true) ?>" />
